src/sections/statistics/Statistics.module.scss
@use '../../styles/tokens' as t;
@use '../../styles/mixins' as mix;

.statistics {
  &__grid {
    display: grid;
    grid-template-columns: 1fr;
    gap: t.space(2);
    width: 100%;

    @include mix.bp(sm) {
      grid-template-columns: repeat(2, 1fr);
      gap: t.space(3);
    }

    @include mix.bp(lg) {
      grid-template-columns: repeat(3, 1fr);
      gap: t.space(4);
    }
  }
}

